Make all messages configurable, fix bugs, and modernize codebase (v1.3.0)
Move all 47 hardcoded command/error messages to config.yml via MessageManager,
add per-command permission nodes, fix NPE on null reset-day values, add
PlaceholderAPI detection log, and finalize all accumulated improvements from
the v1.2.0 modernization effort.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>